--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install dvc[gs] mlflow pytest joblib scikit-learn pandas pyarrow
+          pip install "dvc[gs]" mlflow pytest joblib scikit-learn pandas pyarrow
 
       - name: DVC pull data
         run: |
